# toycc

./: .gitignore  CMakeLists.txt  GEMINI.md  README.md
docs/: part1_lexer.md  part2_parser_ast.md  part3_codegen_linking.md
examples/: test1.ll  test1.toy  test2.ll  test3.ll
src/: ast.h  codegen.c  codegen.h  lexer.c  lexer.h  main.c  parser.c  parser.h
